# falcons-stats

./: .gitignore  README.md  falcons-stats-server-ssh-key.pub  main.tf  pyproject.toml  variables.tf
.github/workflows/: deploy.yml  infra-deploy.yml  terraform-apply.yml  terraform-plan.yml
falcons_stats/: __init__.py  api.py  db.py  logger.py  main.py  queries.py  scheduler.py  schema.sql  scripts.py  utils.py
falcons_stats/models/: __init__.py  base.py  division.py  keeper.py  player.py  team.py
falcons_stats/scrapers/: __init__.py  base_scraper.py  clean_sheets_scraper.py  goal_scorers_scraper.py
falcons_stats/scrapers/exceptions/: __init__.py  http_error.py
falcons_stats/scripts/: scraper.py
falcons_stats/seeds/: __init__.py  common.py  dev.py
falcons_stats/services/: __init__.py  scraper_service.py  stats_service.py
falcons_stats/tools/: scraper.py
instance/: config.example.py
tests/: conftest.py
tests/test_scrapers/: test_base_scraper.py
