[project]
name = "falcons-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "adriano",email = "72319679+banana-bread@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# main = "falcons_stats_scraper.main:main"
