[project]
name = "falcons-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "adriano",email = "72319679+banana-bread@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "urllib3 (>=1.25.4,<1.27)", # Required by botocore/boto3, which is required by watchtower - pegged to avoid dependency resolver conflicts with watchtower 
    "watchtower (>=3.4.0,<4.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "falcons_stats.scripts:run_dev_server"
